# autoresearch-cnn-rocm

./: .gitignore  README.md  evaluate.py  guide.md  metrics.py  prepare.py  program.md  pyproject.toml  research_log.md  train.py
configs/: default.yaml  search_plan.json  writer_bias.yaml
examples/mnist_writer_like/: README.md
examples/your_project_adapter/: README.md
mnist_cnn/: __init__.py  __main__.py  cli.py  config.py  data.py  evaluation.py  metrics.py  model.py  runs.py  sweep.py  training.py
scripts/: auto_sweep.ps1  check_rocm.py  run_agent_loop.ps1  run_agent_loop.sh  run_baseline.sh
